// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadProgress component should render without crashing 1`] = `
<Fragment>
  <div
    className="header"
  >
    <span>
      PROGRESS
    </span>
    <span
      className="uploaded"
    >
      UPLOADED
    </span>
  </div>
  <div
    className="progressContainer"
  >
    <div
      className="progress"
      style={
        Object {
          "width": "50%",
        }
      }
    />
  </div>
  <div
    className="ack"
  >
    The file "foo" its ok, have no errors.
  </div>
</Fragment>
`;

exports[`UploadProgress component should show fileUploaded if progress is 100 1`] = `
<Fragment>
  <div
    className="header"
  >
    <span>
      PROGRESS
    </span>
    <span
      className="uploaded show"
    >
      UPLOADED
    </span>
  </div>
  <div
    className="progressContainer"
  >
    <div
      className="progress"
      style={
        Object {
          "width": "100%",
        }
      }
    />
  </div>
  <div
    className="ack show"
  >
    The file "foo" its ok, have no errors.
  </div>
</Fragment>
`;
